Fix letter spacing issue in heading

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 
 :root {
   font-size: 10px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   --clr-text-primary: black;
   --clr-text-logo: white;
 
@@ -74,7 +75,6 @@ body {
   padding-top: 5em;
   max-width: 80ch;
 
-  word-spacing: -5px;
 }
 
 .form-content {
